// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-gatsby should specify proper presets and plugins when stage is build-html 1`] = `
Object {
  "plugins": Array [
    Array [
      "<node_modules>/@babel/plugin-proposal-class-properties/index.js",
      Object {
        "loose": true,
      },
    ],
    "<node_modules>/babel-plugin-macros/index.js",
    "<node_modules>/@babel/plugin-syntax-dynamic-import/index.js",
    Array [
      "<node_modules>/@babel/plugin-transform-runtime/index.js",
      Object {
        "absoluteRuntimePath": "<node_modules>/@babel/runtime/package.json",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    Array [
      "<node_modules>/@babel/plugin-transform-spread/index.js",
      Object {
        "loose": false,
      },
    ],
    "<node_modules>/babel-plugin-dynamic-import-node/index.js",
  ],
  "presets": Array [
    Array [
      "<node_modules>/@babel/preset-env/index.js",
      Object {
        "corejs": 2,
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "loose": true,
        "modules": false,
        "targets": Object {
          "node": "current",
        },
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "<node_modules>/@babel/preset-react/index.js",
      Object {
        "development": false,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`babel-preset-gatsby should specify proper presets and plugins when stage is build-javascript 1`] = `
Object {
  "plugins": Array [
    Array [
      "<node_modules>/@babel/plugin-proposal-class-properties/index.js",
      Object {
        "loose": true,
      },
    ],
    "<node_modules>/babel-plugin-macros/index.js",
    "<node_modules>/@babel/plugin-syntax-dynamic-import/index.js",
    Array [
      "<node_modules>/@babel/plugin-transform-runtime/index.js",
      Object {
        "absoluteRuntimePath": "<node_modules>/@babel/runtime/package.json",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    Array [
      "<node_modules>/@babel/plugin-transform-spread/index.js",
      Object {
        "loose": false,
      },
    ],
    "<node_modules>/babel-plugin-dynamic-import-node/index.js",
    Array [
      "<node_modules>/babel-plugin-transform-react-remove-prop-types/index.js",
      Object {
        "removeImport": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<node_modules>/@babel/preset-env/index.js",
      Object {
        "corejs": 2,
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "loose": true,
        "modules": false,
        "targets": undefined,
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "<node_modules>/@babel/preset-react/index.js",
      Object {
        "development": false,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`babel-preset-gatsby should specify proper presets and plugins when stage is build-stage 1`] = `
Object {
  "plugins": Array [
    Array [
      "<node_modules>/@babel/plugin-proposal-class-properties/index.js",
      Object {
        "loose": true,
      },
    ],
    "<node_modules>/babel-plugin-macros/index.js",
    "<node_modules>/@babel/plugin-syntax-dynamic-import/index.js",
    Array [
      "<node_modules>/@babel/plugin-transform-runtime/index.js",
      Object {
        "absoluteRuntimePath": "<node_modules>/@babel/runtime/package.json",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    Array [
      "<node_modules>/@babel/plugin-transform-spread/index.js",
      Object {
        "loose": false,
      },
    ],
    "<node_modules>/babel-plugin-dynamic-import-node/index.js",
  ],
  "presets": Array [
    Array [
      "<node_modules>/@babel/preset-env/index.js",
      Object {
        "corejs": 2,
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "loose": true,
        "modules": false,
        "targets": undefined,
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "<node_modules>/@babel/preset-react/index.js",
      Object {
        "development": false,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`babel-preset-gatsby should specify proper presets and plugins when stage is develop 1`] = `
Object {
  "plugins": Array [
    Array [
      "<node_modules>/@babel/plugin-proposal-class-properties/index.js",
      Object {
        "loose": true,
      },
    ],
    "<node_modules>/babel-plugin-macros/index.js",
    "<node_modules>/@babel/plugin-syntax-dynamic-import/index.js",
    Array [
      "<node_modules>/@babel/plugin-transform-runtime/index.js",
      Object {
        "absoluteRuntimePath": "<node_modules>/@babel/runtime/package.json",
        "corejs": false,
        "helpers": true,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    Array [
      "<node_modules>/@babel/plugin-transform-spread/index.js",
      Object {
        "loose": false,
      },
    ],
    "<node_modules>/babel-plugin-dynamic-import-node/index.js",
  ],
  "presets": Array [
    Array [
      "<node_modules>/@babel/preset-env/index.js",
      Object {
        "corejs": 2,
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "loose": true,
        "modules": false,
        "targets": undefined,
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "<node_modules>/@babel/preset-react/index.js",
      Object {
        "development": true,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
  ],
}
`;
